# winusb-switcher-tauri-lite

./: README.md  package.json
.github/workflows/: build.yml  ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: segger-99-jlink.rules
src-tauri/src/: bundled_jlink.rs  lib.rs  main.rs
src-tauri/src/commands/: lite.rs  probe.rs
src-tauri/src/jlink/: runner.rs
src-tauri/src/platform/: mod.rs
src/renderer/: App.tsx
